sumo/tests/traci/VariableRetrieval/Lane/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 163: Unsupported variable specified
